...
            <objects>
                <viewController storyboardIdentifier="SearchViewController" id="BYZ-38-t0r" customClass="SearchViewController" customModule="MusicApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" restorationIdentifier="Search" translatesAutoresizingMaskIntoConstraints="NO" id="QiR-hd-CpB">
                                <rect key="frame" x="0.0" y="103" width="393" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="zWU-tE-axr"/>
                                </connections>
                            </searchBar>
...
                            <constraint firstItem="0je-eP-2MV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="tNP-oo-kKr"/>
                            <constraint firstItem="X5O-Ik-OWe" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ueF-tO-070"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="5lO-AX-9Yh"/>
                    <connections>
                        <outlet property="collectionView" destination="0je-eP-2MV" id="FrW-mk-xDE"/>
                        <outlet property="emptySearchLabel" destination="X5O-Ik-OWe" id="eGL-39-324"/>
                        <outlet property="searchBar" destination="QiR-hd-CpB" id="p10-iQ-cgJ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
