...
    func textDidChange(searchText: String) {
        interactor.searchText = searchText
    }
    
    func viewDidLoad() {
        view.setUpCollectionView()
        view.setTitle("iTunes Search")
        interactor.searchText = ""
    }
    
    func numberOfItems() -> Int {
        musics.count
    }
...
